# brtmpserver

./: CMakeLists.txt  Makefile  README.md  server.cpp
brpc/: config.mk
src/: CMakeLists.txt  main.cpp  rtmpservice.cpp  rtmpservice.hpp  server.cpp
